# my_mixtape_creation

./: .gitignore  CLAUDE.md  README.md  app.py  launch.bat  pyproject.toml  requirements.txt
.claude/: settings.local.json
claude_notes/: 2026-04-09-per-track-fx-and-settings-page-design.md  plans.md  pr_changelog.md  tech_stack.md
cover/: README.md
src/mixtape/: __main__.py  audio.py  cover.py  mixcloud.py  tracklist.py  web.py
src/mixtape/static/: app.js  style.css
src/mixtape/templates/: index.html  settings.html
