[project]
name = "mixtape"
version = "0.1.0"
description = "Build a glued mixtape file for Mixcloud"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "PyYAML",
  "flask",
]

[project.scripts]
mixtape = "mixtape.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

